--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,11 @@ section {
 }
 
 .navbar__menu li {
+    padding-left: 10px;
+    padding-right: 10px;
+    float: left;
+    font-size: large;
+    color: #000;
     display: inline-block;
 }
 
