--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,10 @@ section {
 }
 
 .navbar__menu li {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     float: left;
     font-size: large;
     color: #000;
