--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,8 @@ section {
     padding-top: 15px;
     padding-bottom: 15px;
     float: left;
-    font-size: large;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 1em;
     color: #000;
     display: inline-block;
 }
